/**
 * ZZXLåœºæ™¯æ¨¡æ‹Ÿå™¨ - ä¸“é—¨ç”¨äºŽ zzxl.pcd ç‚¹äº‘åœºæ™¯
 * åœºæ™¯ä¿¡æ¯: 31.4m Ã— 15.5m Ã— 5.2m å¤§åž‹å®¤å†…çŽ¯å¢ƒ, 513,550ä¸ªç‚¹
 */

const DroneSimulator = require('./simulator');
const fs = require('fs');
const readline = require('readline');
const protoHandler = require('./proto-handler');

class ZZXLSimulator extends DroneSimulator {
  constructor(mqttBroker = 'mqtt://127.0.0.1:1883') {
    super('../zzxl.pcd', mqttBroker);

    // åŠ è½½protoHandler
    this.protoHandler = protoHandler;

    // åœºæ™¯åŠ è½½æ ‡å¿—
    this.sceneLoaded = false;

    // åœºæ™¯ç‰¹å®šå‚æ•°
    this.sceneBounds = {
      minX: -14.7, maxX: 16.7,   // 31.4m
      minY: -5.6, maxY: 9.8,     // 15.5m
      minZ: -1.0, maxZ: 4.2      // 5.2m
    };

    // è®¾ç½®èµ·ç‚¹ä¸ºåœºæ™¯ä¸­å¿ƒåä¸‹çš„ä½ç½®
    this.position = {
      x: 1.0,   // åœºæ™¯ä¸­å¿ƒé™„è¿‘
      y: 2.0,
      z: 1.5    // å®‰å…¨é«˜åº¦
    };

    // è°ƒæ•´ä¼ æ„Ÿå™¨å‚æ•°ä»¥é€‚åº”å¤§åœºæ™¯
    this.sensorRange = 15;  // 15ç±³ä¼ æ„Ÿå™¨èŒƒå›´
    this.pointCloudDensity = 1000;  // æ¯æ¬¡å‘é€1000ä¸ªç‚¹
    this.speed = 1.0;  // 1 m/s é£žè¡Œé€Ÿåº¦

    // åŠ è½½è¿›åº¦
    this.loadProgress = 0;
  }

  /**
   * ä¼˜åŒ–çš„PCDåŠ è½½ (å¸¦è¿›åº¦æ˜¾ç¤º)
   */
  async loadPCD() {
    console.log('ðŸ“‚ å¼€å§‹åŠ è½½å¤§åž‹ç‚¹äº‘æ–‡ä»¶...');
    const startTime = Date.now();

    return new Promise((resolve, reject) => {
      const fileStream = fs.createReadStream(this.scenePcdFile);
      const rl = readline.createInterface({
        input: fileStream,
        crlfDelay: Infinity
      });

      let lineCount = 0;
      let dataStarted = false;
      let totalPoints = 0;
      let loadedPoints = 0;
      let lastProgressUpdate = Date.now();

      rl.on('line', (line) => {
        lineCount++;

        // è¯»å–POINTSå­—æ®µèŽ·å–æ€»æ•°
        if (line.startsWith('POINTS')) {
          totalPoints = parseInt(line.split(/\s+/)[1]);
          console.log(`ðŸ“Š æ€»ç‚¹æ•°: ${totalPoints.toLocaleString()}`);
        }

        // æ•°æ®å¼€å§‹æ ‡è®°
        if (line.startsWith('DATA')) {
          dataStarted = true;
          console.log('ðŸ”„ å¼€å§‹åŠ è½½ç‚¹äº‘æ•°æ®...');
          return;
        }

        // è§£æžç‚¹äº‘æ•°æ®
        if (dataStarted && line.trim()) {
          const parts = line.trim().split(/\s+/);
          if (parts.length >= 4) {
            const x = parseFloat(parts[0]);
            const y = parseFloat(parts[1]);
            const z = parseFloat(parts[2]);
            const rgb = parseInt(parts[3]);

            // é‡‡æ ·: æ¯10ä¸ªç‚¹å–1ä¸ª (å‡å°‘å†…å­˜å ç”¨)
            if (loadedPoints % 10 === 0) {
              this.scenePoints.push({
                x, y, z,
                intensity: Math.floor(rgb & 0xFF)  // ä»ŽRGBæå–å¼ºåº¦ï¼Œå¿…é¡»æ˜¯æ•´æ•° 0-255
              });
            }

            loadedPoints++;

            // æ¯1ç§’æ›´æ–°ä¸€æ¬¡è¿›åº¦
            const now = Date.now();
            if (now - lastProgressUpdate > 1000) {
              this.loadProgress = (loadedPoints / totalPoints * 100).toFixed(1);
              console.log(`â³ åŠ è½½è¿›åº¦: ${this.loadProgress}% (${loadedPoints.toLocaleString()}/${totalPoints.toLocaleString()})`);
              lastProgressUpdate = now;
            }
          }
        }
      });

      rl.on('close', () => {
        const duration = ((Date.now() - startTime) / 1000).toFixed(1);
        console.log(`âœ… åŠ è½½å®Œæˆ! è€—æ—¶ ${duration}ç§’`);
        console.log(`ðŸ“Š åŽŸå§‹ç‚¹æ•°: ${totalPoints.toLocaleString()}`);
        console.log(`ðŸ“Š é‡‡æ ·åŽç‚¹æ•°: ${this.scenePoints.length.toLocaleString()}`);
        console.log(`ðŸ“ åœºæ™¯å¤§å°: ${(this.sceneBounds.maxX - this.sceneBounds.minX).toFixed(1)}m Ã— ${(this.sceneBounds.maxY - this.sceneBounds.minY).toFixed(1)}m Ã— ${(this.sceneBounds.maxZ - this.sceneBounds.minZ).toFixed(1)}m`);
        resolve();
      });

      rl.on('error', (error) => {
        console.error('âŒ åŠ è½½å¤±è´¥:', error);
        reject(error);
      });
    });
  }

  /**
   * é‡å†™åœºæ™¯åŠ è½½æ–¹æ³•
   */
  async loadScene() {
    console.log(`ðŸ“‚ åŠ è½½ZZXLåœºæ™¯: ${this.scenePcdFile}`);

    if (!fs.existsSync(this.scenePcdFile)) {
      console.error('âŒ æ‰¾ä¸åˆ° zzxl.pcd æ–‡ä»¶!');
      console.log('ðŸ’¡ è¯·ç¡®ä¿æ–‡ä»¶åœ¨: c:\\Users\\23054\\Desktop\\å®¤å†…æ— äººæœº\\zzxl.pcd');
      process.exit(1);
    }

    await this.loadPCD();
    this.sceneLoaded = true;  // æ ‡è®°åœºæ™¯å·²åŠ è½½
  }

  /**
   * æ™ºèƒ½èµ·é£žåºåˆ—
   */
  async takeoff(height = 1.5) {
    console.log(`ðŸš èµ·é£žåˆ°é«˜åº¦ ${height}m...`);
    this.setTarget(this.position.x, this.position.y, height);

    return new Promise((resolve) => {
      const checkInterval = setInterval(() => {
        if (!this.isFlying) {
          clearInterval(checkInterval);
          console.log('âœ… èµ·é£žå®Œæˆ');
          resolve();
        }
      }, 100);
    });
  }

  /**
   * è‡ªåŠ¨æŽ¢ç´¢æ¼”ç¤ºè·¯å¾„
   */
  async autoExploreDemo() {
    console.log('ðŸ—ºï¸ å¯åŠ¨è‡ªåŠ¨æŽ¢ç´¢æ¼”ç¤º...');

    // è§„åˆ’ä¸€æ¡è¦†ç›–åœºæ™¯çš„è·¯å¾„
    const waypoints = [
      { x: 1, y: 2, z: 1.5, name: 'èµ·ç‚¹' },
      { x: 10, y: 2, z: 1.5, name: 'å‘ä¸œ' },
      { x: 10, y: 6, z: 1.5, name: 'å‘åŒ—' },
      { x: -8, y: 6, z: 1.5, name: 'å‘è¥¿' },
      { x: -8, y: -3, z: 1.5, name: 'å‘å—' },
      { x: 1, y: -3, z: 1.5, name: 'ä¸­éƒ¨' },
      { x: 1, y: 2, z: 1.5, name: 'è¿”å›žèµ·ç‚¹' }
    ];

    for (const wp of waypoints) {
      console.log(`ðŸŽ¯ é£žå¾€: ${wp.name} (${wp.x}, ${wp.y}, ${wp.z})`);
      this.setTarget(wp.x, wp.y, wp.z);

      // ç­‰å¾…åˆ°è¾¾
      await new Promise((resolve) => {
        const checkInterval = setInterval(() => {
          if (!this.isFlying) {
            clearInterval(checkInterval);
            resolve();
          }
        }, 100);
      });

      // åœ¨æ¯ä¸ªèˆªç‚¹æ‚¬åœ2ç§’
      console.log('â¸ï¸ æ‚¬åœé‡‡é›†æ•°æ®...');
      await new Promise(resolve => setTimeout(resolve, 2000));
    }

    console.log('ðŸŽ‰ è‡ªåŠ¨æŽ¢ç´¢æ¼”ç¤ºå®Œæˆ!');
  }

  /**
   * èŽ·å–åœºæ™¯ä¿¡æ¯
   */
  getSceneInfo() {
    return {
      name: 'ZZXLå®¤å†…åœºæ™¯',
      totalPoints: this.scenePoints.length,
      bounds: this.sceneBounds,
      size: {
        width: (this.sceneBounds.maxX - this.sceneBounds.minX).toFixed(1),
        depth: (this.sceneBounds.maxY - this.sceneBounds.minY).toFixed(1),
        height: (this.sceneBounds.maxZ - this.sceneBounds.minZ).toFixed(1)
      },
      startPosition: this.position
    };
  }

  /**
   * é‡å†™å‘å¸ƒå¿ƒè·³ - ä½¿ç”¨Protobuf
   */
  publishHeartbeat() {
    try {
      const buffer = this.protoHandler.createHeartbeat({
        seqenceId: this.seqId++,
        timestamp: Date.now()
      });
      this.mqttClient.publish('/daf/heartbeat', buffer);
    } catch (error) {
      console.error('å‘å¸ƒå¿ƒè·³å¤±è´¥:', error.message);
    }
  }

  /**
   * é‡å†™å‘å¸ƒä½å§¿ - ä½¿ç”¨Protobuf
   */
  publishOdometry() {
    try {
      const buffer = this.protoHandler.createOdometry({
        position: this.position,      // ç›´æŽ¥ä¼ position
        orientation: this.orientation, // ç›´æŽ¥ä¼ orientation
        velocity: this.velocity        // ç›´æŽ¥ä¼ velocity
      });
      this.mqttClient.publish('/daf/local/odometry', buffer);
    } catch (error) {
      console.error('å‘å¸ƒä½å§¿å¤±è´¥:', error.message);
    }
  }

  /**
   * é‡å†™å‘å¸ƒç‚¹äº‘ - ä½¿ç”¨Protobuf (åªåœ¨åœºæ™¯åŠ è½½åŽå‘é€)
   */
  publishPointCloud() {
    // åœºæ™¯æœªåŠ è½½æ—¶ä¸å‘é€ç‚¹äº‘
    if (!this.sceneLoaded) {
      return;
    }

    try {
      const visiblePoints = this.getVisiblePoints();

      // è½¬æ¢ä¸ºprotoæ ¼å¼: {xyz: {x, y, z}, intensity: uint32}
      const protoPoints = visiblePoints.map(p => ({
        xyz: {
          x: p.x,
          y: p.y,
          z: p.z
        },
        intensity: Math.floor(p.intensity),  // ç¡®ä¿æ˜¯æ•´æ•°
        rgb: 0
      }));

      const buffer = this.protoHandler.createPointCloud({
        points: protoPoints
      });
      this.mqttClient.publish('/daf/pointcloud', buffer);
    } catch (error) {
      console.error('å‘å¸ƒç‚¹äº‘å¤±è´¥:', error.message);
    }
  }
}

// å‘½ä»¤è¡Œå¯åŠ¨
if (require.main === module) {
  const simulator = new ZZXLSimulator();

  (async () => {
    try {
      // 1. åˆå§‹åŒ–Protobuf
      await protoHandler.init();
      console.log('âœ… Protobufå·²åŠ è½½');

      // 2. åŠ è½½åœºæ™¯ï¼ˆåŽå°åŠ è½½ï¼Œä½†ä¸å‘é€ç‚¹äº‘ï¼‰
      console.log('ðŸ“‚ å¼€å§‹åŠ è½½åœºæ™¯...');
      await simulator.loadScene();

      const info = simulator.getSceneInfo();
      console.log('\nðŸ“Š åœºæ™¯ä¿¡æ¯:');
      console.log(`   åç§°: ${info.name}`);
      console.log(`   å¤§å°: ${info.size.width}m Ã— ${info.size.depth}m Ã— ${info.size.height}m`);
      console.log(`   ç‚¹æ•°: ${info.totalPoints.toLocaleString()}`);
      console.log(`   èµ·ç‚¹: (${info.startPosition.x}, ${info.startPosition.y}, ${info.startPosition.z})`);
      console.log('');

      // 3. è¿žæŽ¥MQTT
      await simulator.connectMQTT();

      // 4. å¯åŠ¨æ¨¡æ‹Ÿå™¨ï¼ˆä¼šå‘é€ç‚¹äº‘ï¼Œå› ä¸ºåœºæ™¯å·²åŠ è½½ï¼‰
      simulator.start();

      console.log('ðŸ§­ æ¨¡æ‹Ÿå™¨å·²å°±ç»ªï¼Œç­‰å¾…æŽ¢ç´¢å¼•æ“ŽæŽ§åˆ¶...');
      console.log('ðŸ’¡ åœ¨Webç•Œé¢ç‚¹å‡»"å¼€å§‹æŽ¢ç´¢"æŒ‰é’®å¯åŠ¨æ™ºèƒ½æŽ¢ç´¢');
      console.log('ðŸ’¡ æŒ‰ Ctrl+C é€€å‡ºæ¨¡æ‹Ÿå™¨');
      console.log('');

    } catch (error) {
      console.error('âŒ å¯åŠ¨å¤±è´¥:', error);
      process.exit(1);
    }
  })();

  // Ctrl+C ä¼˜é›…é€€å‡º
  process.on('SIGINT', () => {
    console.log('\nðŸ‘‹ é€€å‡ºæ¨¡æ‹Ÿå™¨...');
    simulator.stop();
    process.exit(0);
  });
}

module.exports = ZZXLSimulator;
